--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
+        kotlinCompilerVersion '1.5.31'
     }
     packagingOptions {
         resources {
@@ -55,6 +55,16 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+
+    // Tab Layout & View Pager
+    implementation "com.google.accompanist:accompanist-pager:0.12.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.12.0"
+
+    // Image Rendering
+    implementation 'io.coil-kt:coil-compose:1.4.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
     testImplementation 'junit:junit:4.+'
